--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 	</head>
 	<body>
 		<h1>Olá Mundo!!</h1>
-		<p>Nome : Alexandre</p>
+		<p>Nome : Rodrigo</p>
+		<div>
+			<!-- QAUI SE INICIA O BLOCO DE TRABALHO -->
+			<label>Usuário</label><br>
+			<input type="text" placeholder=
+			"Digite seu nome de usuário">
+			<button>LOGIN</button>
+			<!-- ENCERRANDO O BLOCO DE TRABALHO -->
+		</div>
 	</body>
 </html>
